[b][color=orange]v3.20[/color], 23.03.2018[/b][list]
[*]Add an itemlevel link feature. Shows the slot/item level on linked items in chat.
[*]Update a lot of skins.
[*]Change the default position for the WorldMap.
[*]Add the ls_Toast skin to my Plugin.
[*]Add my logo on the ElvUI config.
[*]Remove the custom Minimap blip textures.
[*]Remove my Expressway font.
[*]Remove the move Blizz function.
[*]The Teleport menu will now only show one of general "Hearthstone" items.
[*]Included an edited version of cargBags_Nivaya.[/list]

[b][color=orange]v3.19[/color], 30.01.2018[/b][list]
[*]Add an EquipSet Bar. Thx Azilroka for this <3
[*]Fix Party/Raid position for high resolutions.
[*]Update BigWigs Skin. No Half-Bar anymore.
[*]Replace the Quest button with a Talent button in the MicroBar.
[*]Don't hide the AFK options if BenikUI is loaded.
[*]Add new font settings for S&L (its not live yet), will error out.
[*]Fixed the option for the MerchantItemLevel.[/list]

[b][color=orange]v3.18[/color], 26.01.2018[/b][list]
[*]Changed the middle Datatext framestrata.
[*]Add an option to disable the Infotexts style.
[*]Show the option to disable my AFK Screen.
[*]Correctly disable the Orderhall Commandbar, if the skin is disabled.[/list]

[b][color=orange]v3.17[/color], 23.01.2018[/b][list]
[*]Add an ObjectiveTracker collapse function on Raid Bosses.
[*]Fix Chat Button, it will now get the actual size from the chat height.
[*]Update many skins.
[*]Update BigWigs and Details profiles.
[*]Create a mover for the SpecBar.
[*]Add an own MicroBar with right click functionality from the LocPanel.
[*]Update the skinning function for buttons to be transparent. Thx Simpy <3
[*]Readd the custom MiniMap textures.
[*]Update the AFK Frame. =)
[*]Layout Update.[/list]

[b][color=orange]v3.16[/color], 29.12.2017[/b][list]
[*]Add a mouseover name feature. To display the unit name on the mouse.
[*]Update gmotd.
[*]Fix for chat size after reload (hardcoded!!).
[*]Create an own AltPowerBar.